<resources>
    <string name="app_name">Calculator For Google Bootcamp</string>
    <string name="yedi">7</string>
    <string name="sekiz">8</string>
    <string name="dokuz">9</string>
    <string name="carpi">x</string>
    <string name="dort">4</string>
    <string name="bes">5</string>
    <string name="alti">6</string>
    <string name="eksi">-</string>
    <string name="bir">1</string>
    <string name="iki">2</string>
    <string name="uc">3</string>
    <string name="arti">+</string>
    <string name="esittir">=</string>
    <string name="sifir">0</string>
    <string name="bol">/</string>
    <string name="artieksi">+-</string>
    <string name="hata">Hata</string>
    <string name="sonuc_tanimsiz">Sonuç Tanımsız</string>
    <string name="hesapla">Hesapla</string>
    <string name="virgul">,</string>
    <string name="nokta">.</string>
    <string name="karekok">√</string>
    <string name="x2">X²</string>
    <string name="temizle">C</string>
    <string name="faktoriyelisaret">x!</string>
    <string name="backspace"><![CDATA[<-]]></string>
    <string name="sadece_sayi_hata_mesaji">Sadece sayı girin</string>
</resources>