<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:hint="@string/sifir"
        android:id="@+id/islemEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/islemEditText">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/ussu_iki_button"
                android:text="@string/x2"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="75dp"/>
            <Button
                android:id="@+id/karekok_button"
                android:text="@string/karekok"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
            <Button
                android:id="@+id/faktoriyel_button"
                android:text="@string/faktoriyelisaret"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>

            <Button
                android:id="@+id/backspace_button"
                android:text="@string/backspace"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/yedi_button"
                android:text="@string/yedi"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
            <Button
                android:id="@+id/sekiz_button"
                android:text="@string/sekiz"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
            <Button
                android:id="@+id/dokuz_button"
                android:text="@string/dokuz"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
            <Button
                android:id="@+id/carpi_button"
                android:text="@string/carpi"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/dort_button"
                android:text="@string/dort"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
            <Button
                android:id="@+id/bes_button"
                android:text="@string/bes"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
            <Button
                android:id="@+id/alti_button"
                android:text="@string/alti"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
            <Button
                android:id="@+id/eksi_button"
                android:text="@string/eksi"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/bir_button"
                android:text="@string/bir"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
            <Button
                android:id="@+id/iki_button"
                android:text="@string/iki"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
            <Button
                android:id="@+id/uc_button"
                android:text="@string/uc"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
            <Button
                android:id="@+id/arti_button"
                android:text="@string/arti"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/temizle_button"
                android:text="@string/temizle"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>

            <Button
                android:id="@+id/sifir_button"
                android:text="@string/sifir"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
            <Button
                android:id="@+id/nokta_button"
                android:text="@string/nokta"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
            <Button
                android:id="@+id/bolme_button"
                android:text="@string/bol"
                android:layout_weight="0.25"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:layout_height="75dp"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hesapla"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="24sp"
            android:id="@+id/esittir_button"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>